--- a/full-js/styles/home.css
+++ b/full-js/styles/home.css
@@ -29,6 +29,7 @@
         -ms-flex: 0 0 100%!important;
         max-width: 100%!important;
         flex: 0 0 100%!important;
+        margin-top: 2rem;
     }
     #homeContentWrapper div.pl-5 {
         padding: 0 7vw!important;
